--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/BlogSync/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/BlogSync/Index.cshtml
@@ -51,15 +51,25 @@
                         }
                     });
                 },
+                saveCnBlogsSetting: function () {
+                    var $vm = this;
+                    var data = {
+                        CnBlogsSyncSwitch:$vm.options.cnBlogsSyncSwitch,
+                        CnBlogsUserName: $vm.options.cnBlogsUserName,
+                        CnBlogsPassword: $vm.options.cnBlogsPassword,
+                        CnBlogsUrl: $vm.options.cnBlogsUrl
+                    };
+                    $vm.saveSetting(data);
+                },
                 saveGitSetting: function () {
                     var $vm = this;
                     var data = {
-                        gitProjectCloneUrl:$vm.options.gitProjectCloneUrl,
-                        gitWebHookSecret:$vm.options.gitWebHookSecret,
-                        gitUerName:$vm.options.gitUerName,
-                        gitPassword:$vm.options.gitPassword,
-                        gitCommitter:$vm.options.gitCommitter,
-                        gitAuthorId:$vm.options.gitAuthorId
+                        gitProjectCloneUrl: $vm.options.gitProjectCloneUrl,
+                        gitWebHookSecret: $vm.options.gitWebHookSecret,
+                        gitUerName: $vm.options.gitUerName,
+                        gitPassword: $vm.options.gitPassword,
+                        gitCommitter: $vm.options.gitCommitter,
+                        gitAuthorId: $vm.options.gitAuthorId
                     };
                     $vm.saveSetting(data);
                 },
@@ -268,39 +278,33 @@
                                 <div class="panel-body">
                                     <form class="form-horizontal" role="form" id="global-form">
                                         <div class="form-group">
-                                            <label class="col-md-3 control-label">网站地址</label>
+                                            <label class="col-md-3 control-label">同步开关</label>
                                             <div class="col-md-9">
-                                                <input type="text" v-model="options.siteUrl" class="form-control" placeholder="网站地址" required aria-required="true" />
-                                                <span class="help-block"><small>请和你当前访问的域名保持一致，否则会出现渲染错误。</small></span>
+                                                <input type="text" class="form-control" v-model="options.cnBlogsSyncSwitch" placeholder="同步开关" required aria-required="true" />
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <label class="col-md-3 control-label">站点标题</label>
+                                            <label class="col-md-3 control-label">博客园用户名</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" v-model="options.siteTitle" placeholder="站点子标题" required aria-required="true" />
+                                                <input type="text" class="form-control" v-model="options.cnBlogsUserName" placeholder="博客园用户名" required aria-required="true" />
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <label class="col-md-3 control-label">站点子标题</label>
+                                            <label class="col-md-3 control-label">博客园密码</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" v-model="options.siteSubtitle" placeholder="站点子标题" required aria-required="true" />
+                                                <input type="text" class="form-control" v-model="options.cnBlogsPassword" placeholder="博客园密码" required aria-required="true" />
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <label class="col-md-3 control-label">站点描述</label>
+                                            <label class="col-md-3 control-label">博客园同步Api地址</label>
                                             <div class="col-md-9">
-                                                <input type="text" class="form-control" v-model="options.description" placeholder="站点描述" required aria-required="true" />
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="col-md-3 control-label">站点关键词</label>
-                                            <div class="col-md-9">
-                                                <input type="text" class="form-control" v-model="options.keywords" placeholder="站点关键词" required aria-required="true" />
+                                                <input type="text" class="form-control" v-model="options.cnBlogsUrl" placeholder="博客园同步Api地址" required aria-required="true" />
                                             </div>
                                         </div>
 
+
                                         <div class="clearfix pull-right">
-                                            <button type="button" class="btn btn-inverse waves-effect waves-light" v-on:click="saveSetting">
+                                            <button type="button" class="btn btn-inverse waves-effect waves-light" v-on:click="saveCnBlogsSetting">
                                                 保存设置
                                             </button>
                                         </div>
