--- a/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -103,8 +103,11 @@
             <div class="footer-container">
                 <div class="meta-item meta-copyright">
                     <div class="meta-copyright-info">
-                        <a href="@ViewService.SiteUrl()" class="info-logo">
+                        <a href="https://github.com/liuzhenyulive/iblogs" class="info-logo">
                             <img src="/templates/themes/default/static/img/logo.png" alt="@ViewService.SiteOption(ConfigKey.SiteTitle)">
+                        </a>
+                        <a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral"  target="_blank" class="upyun-logo">
+                            <img src="/templates/themes/default/static/img/upyun_logo5.png" alt="本站由又拍云加速">
                         </a>
                         <div class="info-text">
                             <p>Always coding,Always writing!</p>
