--- a/Src/iBlogs.Site.Web/Areas/Admin/Views/BlogSync/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Areas/Admin/Views/BlogSync/Index.cshtml
@@ -301,9 +301,7 @@
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">同步开关</label>
                                             <div class="col-md-9">
-                                                <input type="checkbox" id="checked" v-model="options.cnBlogsSyncSwitch">
-                                                <label v-if="options.cnBlogsSyncSwitch">同步开启</label>
-                                                <label v-else="options.cnBlogsSyncSwitch">同步关闭</label>
+                                                <input type="text" class="form-control" v-model="options.cnBlogsSyncSwitch" placeholder="true or false" required aria-required="true" />
                                             </div>
                                         </div>
                                         <div class="form-group">
