update install page

--- a/Src/iBlogs.Site.Web/Views/Install/Index.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Install/Index.cshtml
@@ -153,6 +153,41 @@
                                                    required aria-required="true" />
                                         </div>
                                     </div>
+                                    <div class="form-group clearfix">
+                                        <label class="col-md-3 control-label">* RabbitMq地址</label>
+                                        <div class="col-md-8">
+                                            <input class="form-control" id="rabbitmqHost" name="rabbitmqHost" type="text" placeholder="请输入RabbitMq地址"
+                                                   required aria-required="true" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group clearfix">
+                                        <label class="col-md-3 control-label">* RabbitMq用户名</label>
+                                        <div class="col-md-8">
+                                            <input class="form-control" id="rabbitmqUID" name="rabbitmqUID" type="text" placeholder="请输入RabbitMq用户名"
+                                                   required aria-required="true" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group clearfix">
+                                        <label class="col-md-3 control-label">* RabbitMq密码</label>
+                                        <div class="col-md-8">
+                                            <input class="form-control" id="rabbitmqPwd" name="rabbitmqPwd" type="password" placeholder="请输入RabbitMq密码"
+                                                   required aria-required="true" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group clearfix">
+                                        <label class="col-md-3 control-label">Redis地址</label>
+                                        <div class="col-md-8">
+                                            <input class="form-control" id="redisHost" name="redisHost" type="text" placeholder="填写后将使用redis缓存,不填写则使用内存进行缓存"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group clearfix">
+                                        <label class="col-md-3 control-label">Redis密码</label>
+                                        <div class="col-md-8">
+                                            <input class="form-control" id="redisPwd" name="redisPwd" type="password" placeholder="Redis如有密码请输入"
+                                                   required aria-required="true" />
+                                        </div>
+                                    </div>
+
                                 </section>
                                 <h3>安装完成</h3>
                                 <section>
