--- a/Src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
@@ -1,9 +1,12 @@
 ﻿@model iBlogs.Site.Core.Blog.Meta.DTO.MetaDataViewModel
+@{
+    ViewData["title"] = "所有标签";
+}
 <main role="main" class="App-main">
     <div class="Topstory">
         <div class="Topstory-container">
             <div class="Topstory-mainColumn">
-               
+
                 <div class="Card Topstory-noMarginCard Topstory-tabCard">
                     <nav class="TopstoryTabs Topstory-tabs">
 
