--- a/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -21,7 +21,7 @@
     <script src="@ViewService.ThemeUrl("/static/js/instantclick.min.js")"></script>
     <link rel="shortcut icon" href="@ViewService.ThemeUrl("/static/img/favicon.png")" />
     <link rel="apple-touch-icon" href="@ViewService.ThemeUrl("/static/img/apple-touch-icon.png")" />
-    <title>@(ViewData["title"] ?? "iBlogs")</title>
+    <title>@($"{ViewData["title"]??"iBlogs"} - {ViewService.SiteOption(ConfigKey.SiteTitle)}")</title>
     <link href="@ViewService.ThemeUrl("/static/css/default.min.css")" rel="stylesheet">
     <link href="@ViewService.ThemeUrl("/static/css/style.min.css")" rel="stylesheet">
     @if (ViewService.AllowCloudCdn() == "true")
