--- a/Src/iBlogs.Site.Web/Views/Error/Error500.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Error/Error500.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>500（服务器出差错了）- Tale</title>
+    <title>500（服务器出差错了）- iBlogs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="/static/admin/images/favicon.png" />
