--- a/Src/iBlogs.Site.Web/Views/Error/Loading.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Error/Loading.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>404（找不到页面）- iBlogs</title>
+    <title>系统正在同步数据</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="/static/admin/images/favicon.png" />
@@ -20,9 +20,9 @@
 
     <div class="wrapper-page">
         <div class="ex-page-content text-center">
-            <h1>404!</h1>
-            <h2>很抱歉，没有找到这个页面！</h2>
-            <br>
+            <h1>数据同步中</h1>
+            <h2 class="font-light">请稍后再尝试访问.</h2><br>
+            <p>也可以去我的Github看看 <a href="https://github.com/liuzhenyulive/iblogs/" target="_blank">-></a></p>
             <a class="btn btn-purple waves-effect waves-light" href="/"><i class="fa fa-angle-left"></i> 返回首页</a>
         </div>
     </div>
