--- a/Src/iBlogs.Site.Web/Views/Error/Loading.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Error/Loading.cshtml
@@ -20,10 +20,9 @@
 
     <div class="wrapper-page">
         <div class="ex-page-content text-center">
-            <h1>数据同步中</h1>
-            <h2 class="font-light">请稍后再尝试访问.</h2><br>
-            <p>也可以去我的Github看看 <a href="https://github.com/liuzhenyulive/iblogs/" target="_blank">-></a></p>
-            <a class="btn btn-purple waves-effect waves-light" href="/"><i class="fa fa-angle-left"></i> 返回首页</a>
+            <h2 class="font-light">数据同步中,请稍后再尝试访问.</h2><br>
+            <p>也可以去我的Github看看.</p>
+            <a class="btn btn-purple waves-effect waves-light" href="https://github.com/liuzhenyulive/iblogs/"><i class="fa fa-angle-left"></i>Github</a>
         </div>
     </div>
 </body>
