--- a/Src/iBlogs.Site.Web/Views/Shared/Components/SideBar/Default.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Shared/Components/SideBar/Default.cshtml
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div id="WeChat" class="Pc-card Card" style="display: none">
-                <img class="Banner-image" src="https://raw.githubusercontent.com/liuzhenyulive/iBlogs/Development/Pic/coderayu.png" alt="码农阿宇">
+                <img class="Banner-image" src="https://disk.iblogs.site/pic/coderayu.png" alt="码农阿宇">
             </div>
             <div class="Card">
                 <ul class="GlobalSideBar-categoryList">
