--- a/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/Src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -174,7 +174,7 @@
     @if (!ViewService.SiteOption(ConfigKey.GoogleAnalyticId).IsNullOrWhiteSpace())
     {
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145058275-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=@ViewService.SiteOption(ConfigKey.GoogleAnalyticId)"></script>
     <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
